sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:9: error: ';' expected but ',' found.
      ecart/=1,3
              ^