sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var lgr=getNombreValeurs()
  var ecart=lgr
  var chag=false
  do {
    chag=false
    if (ecart>1)
      ecart/=1,3
    i=0
   	while(i+ecart<lgr){
      if (plusPetit(i+ecart,i)){
      	echange(i+ecart,i)
      	chag=true}
     	i+=1
    }
  }while(ecart>=1 || chag)
  
}